30-09-2025 = = Version 1.6.9 =
* Update: Single page gallery images hover issue resolved.
* Update: Elementor addons gallery images hover issue resolved.

24-09-2025 = = Version 1.6.8 =
* Update: Single page gallery images hover issue resolved.

25-08-2025 = = Version 1.6.7 =
* Update: Modification in th_shop_mania_header_transparent_class disable transparent header for inner pages should work in all pages except frontpage.
* Variation product icon add to add button.

21-08-2025 = = Version 1.6.6 =
* Update: Below footer js code commented  // Below Footer code if made any changes in footer

19-08-2025 = = Version 1.6.5 =
1. TH COMPARE INETEGRATED.
2. Style Improved
3. Tested with latest PHP 8.3 / 8.4.
4. Tested with wordpress 6.8.
5. No open code present (__load_text_domain error)
6. TH Wishlist added in Option Panel.
7. Hooks added at after & before of haeder and footer also class added in these tags.
8. Product layouts style issue resolved.
9. Update: Header implementation through hooks using do_action( 'th_shop_mania_header' );
10. Update: Footer implementation through hooks using do_action( 'th_shop_mania_footer' );
11. Update: Absolute path in th-icon issue resolved.

02-08-2025 = = Version 1.6.4 =
* Update: Move to Top and header on woocommerce deactivation issue resolved.
* Update: Relative path removed from th-icon/fonts/style.css because with speedy cache plugin icons are not showing because of relative path. So it is best practice to use absolute path.
* Update: Move To Top logic changed.

21-07-2025 = = Version 1.6.3 =
* Update: woocommerce style product filters updated.
* New: Single product share button updated with copy link button functionality.

11-07-2025 = = Version 1.6.2 =
* Update: array( 'in_footer' => true, 'strategy'  => 'async',) attribute added in wp_enqueue_script.

08-07-2025 = = Version 1.6.1 =
* Update: Style improved.

27-06-2025 = = Version 1.6.0 =
* Update: woo-login-extend.php new created to make Woocommerce acoount field extend.